Improve value section of local-entries page Add a tab and prettify to view value of the local-entry Fix https://github.com/wso2/micro-integrator/issues/2143
