# monitoring-dashboard/components/org.wso2.ei.dashboard.core/src/main/java/org/wso2/ei/dashboard/micro/integrator/delegates/LocalEntriesDelegate.java
@@ -20,15 +20,21 @@
 
 package org.wso2.ei.dashboard.micro.integrator.delegates;
 
+import com.google.gson.JsonObject;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpGet;
 import org.wso2.ei.dashboard.core.commons.Constants;
+import org.wso2.ei.dashboard.core.commons.utils.HttpUtils;
+import org.wso2.ei.dashboard.core.commons.utils.ManagementApiUtils;
 import org.wso2.ei.dashboard.core.db.manager.DatabaseManager;
 import org.wso2.ei.dashboard.core.db.manager.DatabaseManagerFactory;
 import org.wso2.ei.dashboard.core.rest.delegates.ArtifactDelegate;
 import org.wso2.ei.dashboard.core.rest.model.Ack;
 import org.wso2.ei.dashboard.core.rest.model.ArtifactUpdateRequest;
 import org.wso2.ei.dashboard.core.rest.model.Artifacts;
+import org.wso2.ei.dashboard.core.rest.model.LocalEntryValue;
 
 import java.util.List;
 
@@ -49,5 +55,28 @@ public class LocalEntriesDelegate implements ArtifactDelegate {
     public Ack updateArtifact(String groupId, ArtifactUpdateRequest request) {
 
         return null;
+    }
+
+    public LocalEntryValue getValue(String groupId, String nodeId, String localEntry) {
+        log.debug("Fetching value of local entry " + localEntry + " in node " + nodeId + " of group " + groupId);
+        String mgtApiUrl = ManagementApiUtils.getMgtApiUrl(groupId, nodeId);
+        String accessToken = ManagementApiUtils.getAccessToken(mgtApiUrl);
+        String url = mgtApiUrl.concat("local-entries?name=").concat(localEntry);
+        CloseableHttpResponse httpResponse = doGet(accessToken, url);
+        JsonObject jsonResponse = HttpUtils.getJsonResponse(httpResponse);
+        String value = jsonResponse.get("value").getAsString();
+        LocalEntryValue localEntryValue = new LocalEntryValue();
+        localEntryValue.setValue(value);
+        return localEntryValue;
+    }
+
+    private CloseableHttpResponse doGet(String accessToken, String url) {
+        String authHeader = "Bearer " + accessToken;
+        final HttpGet httpGet = new HttpGet(url);
+
+        httpGet.setHeader("Accept", "application/json");
+        httpGet.setHeader("Authorization", authHeader);
+
+        return HttpUtils.doGet(httpGet);
     }
 }
